# ai-agent-roadmap

./: .gitignore
ai-agent-roadmap/: AI-Agent-Learning.md
ai-agent-roadmap/notes/: README.md
ai-agent-roadmap/notes/_templates/: concept.md  crash.md  weekly.md
ai-agent-roadmap/notes/concepts/: W1-2026-05-12-deepseek-token.md  W1-2026-05-12-openai-function-callingpydantic-schema.md
ai-agent-roadmap/weekly/: W1.md
codemate/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
codemate/docs/: architecture.md  phase0-investigation.md
codemate/examples/: sample_questions.md
codemate/src/codemate/: __init__.py  settings.py
codemate/src/codemate/api/: __init__.py
codemate/src/codemate/api/routes/: __init__.py
codemate/src/codemate/chunkers/: __init__.py
codemate/src/codemate/cli/: __init__.py  main.py
codemate/src/codemate/embeddings/: __init__.py
codemate/src/codemate/features/: __init__.py
codemate/src/codemate/graph/: __init__.py
codemate/src/codemate/graph/nodes/: __init__.py
codemate/src/codemate/llm/: __init__.py
codemate/src/codemate/loaders/: __init__.py  base.py
codemate/src/codemate/mcp_server/: __init__.py
codemate/src/codemate/persistence/: __init__.py
codemate/src/codemate/retrieval/: __init__.py
codemate/src/codemate/tools/: __init__.py
codemate/src/codemate/ui/: __init__.py
codemate/tests/: test_smoke.py
projects/simple-react-agent/: .gitignore  agent_v1.py  hello_llm.py  main.py  pyproject.toml  tools.py
tools/: README.md  new-note.py
